[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
arbitrary = "1.3.0"
borsh = "1.5.3"
solana-sdk = "~2.0"

[dependencies.trident-fuzz]
version = "0.10.0"

[dependencies.amm]
path = "../programs/amm"

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"
